[package]
name = "rustbn-js"
version = "0.1.2"
authors = ["holgerd77 <Holger.Drewes@gmail.com>",
           "cdetrio <cdetrio@gmail.com>",]
publish = false

[dependencies]
bn = { git = "https://github.com/cdetrio/bn", branch = "mont-repr-fix" }
rand = "0.3"
rustc-serialize = "0.3"
num = "0.1"
hex-slice = "0.1.0"
