[package]
name = "rustbn-js"
version = "0.1.2"
authors = ["holgerd77 <Holger.Drewes@gmail.com>",
           "cdetrio <cdetrio@gmail.com>",
           "Alex Beregszaszi <alex@rtfs.hu>"]
publish = false

[dependencies]
bn = { git = "https://github.com/paritytech/bn", default-features = false }
rustc-hex = "1.0"
